@@ -22,6 +22,10 @@ documents those changes that are of interest to users and admins.
     to avoid thrashing slurmd daemon.
  -- Cray - Fix to make nodes state in accounting consistent with state set by
     ALPS.
+ -- Cray - A node DOWN to ALPS will be marked DOWN to SLURM only after reaching
+    SlurmdTimeout. In the interim, the node state will be NO_RESPOND. This
+    change makes behavior makes SLURM handling of the node DOWN state more
+    consistent with ALPS. This change effects only Cray systems.
  -- CRAY - Fix to work with 4.0.* instead of just 4.0.0
 
 * Changes in SLURM 2.3.0.rc1
